--- a/style.css
+++ b/style.css
@@ -56,6 +56,31 @@ header div {
     width: 100%;
 }
 
+/* Section Setting */
+main {
+    padding: 0 20%;
+}
+section {
+    display: inline-block;
+    padding: 10% 0;
+}
+.section-svg {
+    float: left;
+    width: 60%;
+}
+.section-aside {
+    font-size: 1.2em;
+    float: right;
+    width: 40%;
+    padding: 5%;
+}
+.section-aside p {
+    margin: 5% 0;
+}
+
+
+
+
 
 /* Clearfix */
 
